--- a/style.css
+++ b/style.css
@@ -196,8 +196,8 @@ p.p-crypto-money {
 }
 #preloader .circle-preloader {
   display: block;
-  width: 60px;
-  height: 60px;
+  width: 329px;
+  height: 329px;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-bottom-color: #ffffff;
   border-radius: 50%;
@@ -512,6 +512,98 @@ i.fa.fa-user {
 .megamenu-slides .owl-next {
   left: auto;
   right: 5%; }
+
+/*store*/
+.store-area {
+  background:#000;
+  padding: 120px;
+}
+.store-area .blog_content .blog_item {
+  margin-bottom: 30px;
+  box-shadow: 0 0 11px 0 rgba(6, 22, 58, 0.14);
+  position: relative;
+  border-radius: 2px;
+  overflow: hidden;
+}
+.store-area .blog_content .blog_item:hover .store-item img {
+  transform: scale(1.1);
+}
+.store-area .blog_content .blog_item .store-item {
+  overflow: hidden;
+  padding: 0;
+}
+.store-area .blog_content .blog_item .store-item img {
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.store-area .blog_content .blog_item .store-item span i {
+  position: absolute;
+  z-index: 2;
+  color: #fff;
+  font-size: 18px;
+  width: 38px;
+  height: 45px;
+  padding-top: 7px;
+  text-align: center;
+  right: 20px;
+  top: 0;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
+  background-color: #ff5e14;
+}
+.store-area .blog_content .blog_item .blog_details {
+  padding: 25px 20px 30px 20px;
+}
+.store-area .blog_content .blog_item .blog_details .blog_title h5 a {
+  color: #020d26;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 25px;
+  line-height: 32px;
+  font-weight: 400;
+  transition: all 0.3s;
+  text-decoration: none;
+}
+.store-area .blog_content .blog_item .blog_details .blog_title h5 a:hover {
+  color: #ff5e14;
+}
+.store-area .blog_content .blog_item .blog_details ul {
+  padding: 0 3px 10px 0;
+  margin: 0;
+}
+.store-area .blog_content .blog_item .blog_details ul li {
+  display: inline-block;
+  padding-right: 15px;
+  position: relative;
+  color: #7f7f7f;
+}
+.store-area .blog_content .blog_item .blog_details ul li i {
+  padding-right: 7px;
+}
+.store-area .blog_content .blog_item .blog_details p {
+  border-top: 1px solid #e5e5e5;
+  margin-top: 4px;
+  padding: 20px 0 4px;
+}
+.store-area .blog_content .blog_item .blog_details a {
+  font-size: 16px;
+  display: inline-block;
+  color: #ff5e14;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+.store-area .blog_content .blog_item .blog_details a:hover {
+  color: #020d26;
+}
+.store-area .blog_content .blog_item .blog_details a i {
+  vertical-align: middle;
+  font-size: 20px;
+}
+.store-area .blog_content .owl-nav {
+  display: block;
+}
+
 
 /* :: 6.0 Welcome Area CSS */
 .hero-slides {
