--- a/style.css
+++ b/style.css
@@ -182,41 +182,22 @@ p.p-crypto-money {
 }
 
 /* Preloader */
-#preloader {
-  background: #000;
-  background: -webkit-linear-gradient(to right, #000000, #242424);
-  background: linear-gradient(to right, #000000, #242424);
+.preload {
+  background-color: #242424;
+  background-color: -webkit-linear-gradient(to right, #000000, #242424);
+  background-color: linear-gradient(to right, #000000, #242424);
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 5000; 
+  opacity: 1;
+  background-image: url('pore-load.gif');
+  background-size: 298px 298px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-#preloader .circle-preloader {
-  display: block;
-  width: 329px;
-  height: 329px;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-bottom-color: #ffffff;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  animation: spin 2s infinite linear;
-}
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg); } }
 /* Miscellaneous */
 .bg-img {
   background-position: center center;
