--- a/style.css
+++ b/style.css
@@ -182,21 +182,17 @@ p.p-crypto-money {
 }
 
 /* Preloader */
-.preload {
-  background-color: #242424;
-  background-color: -webkit-linear-gradient(to right, #000000, #242424);
-  background-color: linear-gradient(to right, #000000, #242424);
+.preload{
   position: fixed;
-  z-index: 99999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  background-image: url('pore-load.gif');
-  background-size: 298px 298px;
-  background-position: center;
-  background-repeat: no-repeat;
+  z-index:99999;
+  top:0; left:0;
+  width:100%; height:100%;
+  opacity:1;
+  background-color:#242424;
+  background-image:url('pore-load.gif');
+  background-size:298px 298px;
+  background-position:center;
+  background-repeat:no-repeat;
 }
 /* Miscellaneous */
 .bg-img {
