--- a/ead/style.css
+++ b/ead/style.css
@@ -1,44 +1,3 @@
-/*-----------------------------------------------------------------------------------
-
-    Template Name: Kiaalap - Kiaalap Admin Template 
-    Description: Kiaalap Admin Template is a responsive admin template based on the famous Bootstrap framework it's easy to edit and customize by documentation.
-    Author: Colorlib
-    Version: 1.0
-
------------------------------------------------------------------------------------
-    
-    CSS INDEX
-    ===================
-	
-    1. Common
-	2. Helper Class
-	3. All Nested Class
-	4. left sidebar
-		4.1 left Sidebar switcher
-	5. Header Top
-	6. Breadcrumb
-	7. Star Rating css
-	8. Analytics
-	9. widgets CSS
-	10. Event
-	11. Professors
-	12. Student
-	13. Courses
-		13.1 Courses Info
-		13.2. Course Payment
-	14. Library
-	15. Inbox
-	16. Google Map
-	17. Images Cropper
-	18. Form Element
-	19. Mini Sidebar
-	20. Custom Scroll
-	21. Wizard CSS
-	22. Notification
-	23. footer
-
------------------------------------------------------------------------------------*/
-
 /*----------------------------------------*/
 /*  1. Common
 /*----------------------------------------*/
@@ -3650,7 +3609,7 @@ div#sparklinehome canvas {
     width: 100% !important;
 }
 .header-top-area {
-    background: #006DF0;
+    background: #fbb03b;
 }
 .sidebar-nav .metismenu{
 	background: #fff;
@@ -3702,13 +3661,13 @@ div#sparklinehome canvas {
     background: #fff;
 }
 #sidebar .sidebar-header {
-    background: #fff;
+    background: #fbb03b;
 }
 #sidebar.active .sidebar-header {
     padding-top:10px;
 	position:relative;
 	z-index:9;
-	padding-bottom:10px;
+	padding-bottom:12px;
 }
 .order-st i {
     background: #86bc42;
@@ -4118,8 +4077,9 @@ div#sparklinehome canvas {
 	font-weight:300;
 }
 .menu-switcher-pro .btn-info:active, .menu-switcher-pro .btn-info:focus, .menu-switcher-pro .btn-info:hover, .menu-switcher-pro .btn-info:visited, .header-drl-controller-btn.btn-info:active:focus{
-	background: #006DF0;
-	outline:none;
+	background: #000;
+    color: #fbb03b;
+    outline: none;
 }
 .mini-navbar .single-review-st-text img {
     height: 56px;
