--- a/ead/style.css
+++ b/ead/style.css
@@ -3647,7 +3647,8 @@ div#sparklinehome canvas {
     color: #fff;
 }
 .sidebar-nav .metismenu a:hover, .sidebar-nav .metismenu a:focus, .sidebar-nav .metismenu a:active {
-    background: #F6F6F6;
+    background: #fbb03b;
+    color:#fff;
 }
 .header-top-menu .navbar-nav>li .dropdown-menu, .header-right-info ul.header-right-menu li .author-message-top, .header-right-info ul.header-right-menu li .notification-author, .header-right-info ul.header-right-menu li .author-log, .header-right-info ul.header-right-menu li .admintab-wrap.menu-setting-wrap.menu-setting-wrap-bg.dropdown-menu {
     background: #fff;
