--- a/ead/style.css
+++ b/ead/style.css
@@ -36,11 +36,14 @@ body {}
 @font-face {
   font-family: 'educate-icon';
   src:
-    url('fonts/educate-icon.ttf?ka5vvx') format('truetype'),
-    url('fonts/educate-icon.woff?ka5vvx') format('woff'),
-    url('fonts/educate-icon.svg?ka5vvx#educate-icon') format('svg');
+    url('assets/fonts/educate-icon.ttf?ka5vvx') format('truetype'),
+    url('assets/fonts/educate-icon.woff?ka5vvx') format('woff'),
+    url('assets/fonts/educate-icon.svg?ka5vvx#educate-icon') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+i.fa.fa-home {
+    font-size: 22px;
 }
 /*----------------------------------------*/
 /*  2. Helper Class
