--- a/ead/style.css
+++ b/ead/style.css
@@ -839,6 +839,9 @@ ul.setting-panel-list li{
     border-radius: 30px;
     width: 200px;
 }
+h2.logged-home {
+    font-size: 20px;
+}
 .breadcome-heading .form-control:focus {
     border: 1px solid #006DF0;
 }
