--- a/ead/style.css
+++ b/ead/style.css
@@ -3748,7 +3748,7 @@ div#sparklinehome canvas {
     color: #303030;
 }
 .edu-custon-design .panel-heading {
-    background: #006DF0;
+    background: #000;
     color: #fff;
 }
 .panel-group.edu-custon-design .accordion-head a:hover, .panel-group.edu-custon-design .accordion-head a:focus, .panel-group.edu-custon-design .accordion-head a:active {
