--- a/ead/style.css
+++ b/ead/style.css
@@ -4810,3 +4810,48 @@ div#sparklinehome canvas {
 	color:#fff;
 	text-decoration:none;
 }
+
+/*Curso{id}*/
+
+#playlist li{
+    cursor:pointer;
+    border-bottom: 1px solid #CCC;
+    padding: 8px 0;
+}
+
+#playlist li:hover{
+    color:#040404;                        
+}
+#videoarea {
+    width:100%;
+    margin: 10px 0;   
+}
+
+.box-title {
+	background-color: #000000;
+	height: 60px;
+	line-height: 60px;
+	font-size: 14px;
+	color: #fbb03b;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-bottom: 1px solid #fbb03b;
+	white-space: nowrap;
+	overflow: hidden;
+	font-weight: 600;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+}
+.box-body {
+    padding: 20px;
+    font-size: 14px;
+    color: #485053;
+}
+.box {
+    background-color: #f7f7f7;
+    box-shadow: 0px 0px 5px #fbb03b91;
+    margin: 10px 0;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-bottom: 25px;
+}
