Ajustes de M.Q no site principal

--- a/ead/style.css
+++ b/ead/style.css
@@ -518,7 +518,7 @@ i.educate-icon.educate-bell {
 	border-bottom:1px solid #383838;
 }
 ul.message-menu, ul.notification-menu {
-    height: 230px;
+    /*height: 230px;*/
 }
 ul.message-menu li .message-img{
 	float:left;
