--- a/style.css
+++ b/style.css
@@ -588,6 +588,90 @@ i.fa.fa-user {
   display: none;
 }
 
+section#store-area {
+    background: #000;
+    padding: 100px 0;
+}
+.card.card-store {
+  background-color: #000;
+  border: none!important;
+}
+.categoria.list-group a {
+    padding: 0.25rem 1.25rem;
+    background-color: #000;
+    color: #fff;
+    border:none;
+}
+.categoria.list-group a:hover {
+    color: #fbb03b;
+}
+.categoria-body {
+    padding-bottom: 50px;
+}
+@media only screen and (min-width: 480px) and (max-width: 992px) {
+  section#store-area {
+    padding:0;
+  }
+}
+ /* === Product   ====*/
+ .breadcome-menu a {
+    color: #ffffff4f;
+    font-size: 13px;
+}
+ul.breadcome-menu {
+    margin-bottom: 5px;
+}
+.gallery-wrap .img-big-wrap img {
+    height: 100%;
+    width: 100%;
+    display: inline-block;
+    cursor: zoom-in;
+}
+
+.gallery-wrap .img-small-wrap .item-gallery {
+    width: 70px;
+    height: auto;
+    margin: 7px 2px;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.gallery-wrap .img-small-wrap {
+    text-align: center;
+}
+.gallery-wrap .img-small-wrap img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+    /*cursor: zoom-in;*/
+}
+p.card-text span {
+    font-weight: 900;
+}
+p.card-text {
+    font-size: 17px;
+}
+.color-box-waanbii{
+    background: #fff;
+    color: #ffc107;
+    border-radius: 0;
+}
+.color-box-waanbii:hover{
+    background: #ffc107;
+    color: #fff;
+}
+
+.car.color-box-waanbii{
+   padding: 8px 10px;
+}
+.car.color-box-waanbii:hover{
+  padding:10px 15px;
+  color: #000;
+}
+
+
+
 /* :: 6.0 Welcome Area CSS */
 .hero-slides {
   position: relative;
