--- a/style.css
+++ b/style.css
@@ -666,8 +666,9 @@ p.card-text {
    padding: 8px 10px;
 }
 .car.color-box-waanbii:hover{
-  padding:10px 15px;
+  padding:15px 18px;
   color: #000;
+  font-size: 16px;
 }
 
 
