--- a/ead/style.css
+++ b/ead/style.css
@@ -42,7 +42,19 @@ body {}
   font-weight: normal;
   font-style: normal;
 }
-
+/* Preloader */
+.preload{
+  position: fixed;
+  z-index:99999;
+  top:0; left:0;
+  width:100%; height:100%;
+  opacity:1;
+  background-color:#242424;
+  background-image:url('../pore-load.gif');
+  background-size:298px 298px;
+  background-position:center;
+  background-repeat:no-repeat;
+}
 /*----------------------------------------*/
 /*  2. Helper Class
 /*----------------------------------------*/
